# YudinGrigory-CS-Labs-2024

./: CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  Encryption.cpp  Encryption.hpp  Integral.cpp  Integral.hpp  Integration.cpp  Integration.hpp  Logic.cpp  Logic.hpp  MatPrinter.cpp  MatPrinter.hpp  Matrix.cpp  Matrix.hpp  TrigonometricEquationSolver.cpp  TrigonometricEquationSolver.h  Vector.cpp  Vector.hpp  main.cpp  methods.cpp  methods.h  sorting.cpp  sorting.h  sorting.hpp  sorts.cpp  sorts.h
